--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "reactjs-scaffolding",
   "version": "1.0.0",
-  "description": "1. Create application folders     - `public`     - `src` 2. Crete `index.hmtl` entry point of the reactjs application 3. Initialize npm 4. Added initial rulos to .gitignore 5. Install babel     > `npm install --save-dev @babel/core @babel/cli @babel/preset-env @babel/preset-react`",
+  "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --open --config webpack.conf.js",
+    "build": "webpack --config webpack.conf.js --mode development --display verbose --display-error-details",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,9 +17,15 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "react-refresh": "^0.8.0",
+    "react-refresh-webpack-plugin": "^0.1.0",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
+  },
+  "dependencies": {
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
   }
 }
