--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "reactjs-scaffolding",
   "version": "1.0.0",
   "description": "",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:qjuanp/react-scaffolding.git"
+  },
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.conf.js",
@@ -12,20 +16,20 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.8.3",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.4.2",
-    "react-refresh": "^0.8.0",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.3",
+    "react-refresh": "^0.8.1",
     "react-refresh-webpack-plugin": "^0.1.0",
-    "style-loader": "^1.1.3",
-    "webpack": "^4.42.0",
+    "style-loader": "^1.2.0",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
