--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
+    "node-sass": "^4.14.0",
     "react-refresh": "^0.8.1",
     "react-refresh-webpack-plugin": "^0.1.0",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.2.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
